--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -20,8 +20,11 @@
     "lib": ["es2020", "dom"],
     "types": ["jest"],
     "paths": {
-      "@app/*": ["src/app/*"],
-      "@environment": ["src/environments/environment"]
+      "@environment": ["src/environments/environment"],
+      "@core/*": ["src/app/core/*"],
+      "@shared/*": ["src/app/shared/*"],
+      "@components/*": ["src/app/components/*"],
+      "@features/*": ["src/app/features/*"],
     },
     "useDefineForClassFields": false
   },
